--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Welcome to imagepost</h1>
+    <script src="https://cdn.jsdelivr.net/npm/appwrite@16.1.0"></script>
 </body>
 </html>
