--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>imagepost</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <h1>Welcome to imagepost</h1>
+    <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./upload-image.html">Upload</a></li>
+        <li><a href="./login.html">Login</a></li>
+        <li><a href="./routes/register.html">Register</a></li>
+        <li><a href="./index.html">Logout</a></li>
+    </ul>
+    <section class="hidden" id="gallery">
+        <img src="https://placehold.co/300x300/png" alt="Image Placeholder">
+        <img src="https://placehold.co/300x300/png" alt="Image Placeholder">
+        <img src="https://placehold.co/300x300/png" alt="Image Placeholder">
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/appwrite@16.1.0"></script>
+    <script src="./scripts/setup.js"></script>
 </body>
 </html>
