--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="./index.html">Home</a></li>
         <li><a href="./upload-image.html">Upload</a></li>
         <li><a href="./login.html">Login</a></li>
-        <li><a href="./routes/register.html">Register</a></li>
+        <!-- <li><a href="./routes/register.html" disabled>Register</a></li> -->
         <li><a href="./index.html">Logout</a></li>
     </ul>
     <section class="hidden" id="gallery">
